<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<group android:checkableBehavior="single">-->
        <!--<item-->
            <!--android:id="@+id/nav_camera"-->
            <!--android:icon="@drawable/ic_menu_camera"-->
            <!--android:title="Import" />-->
        <!--<item-->
            <!--android:id="@+id/nav_gallery"-->
            <!--android:icon="@drawable/ic_menu_gallery"-->
            <!--android:title="Gallery" />-->
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    <!--</group>-->

    <item android:title="@string/reasons">
        <menu>
            <item
                android:id="@+id/nav_emergencies"
                android:title="@string/emergencies" />
            <item
                android:id="@+id/nav_accidents"
                android:title="@string/accidents" />
            <item
                android:id="@+id/nav_crimes"
                android:title="@string/crime" />
            <item
                android:id="@+id/nav_suspicious"
                android:title="@string/suspicious" />
            <item
                android:id="@+id/nav_safety"
                android:title="@string/safety" />
        </menu>
    </item>


    <!--TODO: CHANGE SECTION TO ADD 2 SENTENCES-->
    <item android:title="@string/calling">
        <menu>
            <item
                android:id="@+id/nav_call"
                android:title="@string/campus_police" />
        </menu>
    </item>

</menu>
